Correct link to uri_create_str()

--- a/uri_create_uri.3.html
+++ b/uri_create_uri.3.html
@@ -193,7 +193,7 @@ hr.footnote-hr {
 	
 	<p>
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="liburi.3.html" target="_top">liburi</a></span>(3)</span>,
-	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_create_str.3.html" target="_top">uri_create_uri</a></span>(3)</span>,
+	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_create_str.3.html" target="_top">uri_create_str</a></span>(3)</span>,
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_destroy.3.html" target="_top">uri_destroy</a></span>(3)</span>,
 <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_absolute.3.html" target="_top">uri_absolute</a></span>(3)</span>,
 <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_str.3.html" target="_top">uri_str</a></span>(3)</span>.
