Add additional documentation.

--- a/liburi.3.html
+++ b/liburi.3.html
@@ -117,7 +117,7 @@ hr.footnote-hr {
 	 — parse URIs and IRIs
   </p></div>
   
-  <div class="refsect1" id="idp19280"><h2>Library</h2>
+  <div class="refsect1" id="idp896"><h2>Library</h2>
 	
 	<p>URI parsing library (liburi, -luri)</p>
   </div>
@@ -163,10 +163,15 @@ hr.footnote-hr {
 			<span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_query.3.html" target="_top">uri_query</a></span>(3)</span>,
 			<span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_fragment.3.html" target="_top">uri_fragment</a></span>(3)</span>.
 		  </p>
+		</dd><dt><span class="term">Obtain information about a parsed URI:</span></dt><dd>
+		  <p>
+			<span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_absolute.3.html" target="_top">uri_absolute</a></span>(3)</span>,
+			<span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_absolute_path.3.html" target="_top">uri_absolute_path</a></span>(3)</span>.
+		  </p>
 		</dd></dl></div>
   </div>
 
-  <div class="refsect1" id="idp50240"><h2>See also</h2>
+  <div class="refsect1" id="idp53888"><h2>See also</h2>
 	
 	<p>
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uriparse.1.html" target="_top">uriparse</a></span>(1)</span>,
@@ -181,11 +186,12 @@ hr.footnote-hr {
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_path.3.html" target="_top">uri_path</a></span>(3)</span>,
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_query.3.html" target="_top">uri_query</a></span>(3)</span>,
 	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_fragment.3.html" target="_top">uri_fragment</a></span>(3)</span>,
-	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_str.3.html" target="_top">uri_str</a></span>(3)</span>.
+	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_str.3.html" target="_top">uri_str</a></span>(3)</span>,
+	  <span class="citerefentry"><span class="refentrytitle"><a class="ulink" href="uri_absolute.3.html" target="_top">uri_absolute</a></span>(3)</span>.
 	</p>
   </div>
 
-  <div class="refsect1" id="idp66016"><h2>History</h2>
+  <div class="refsect1" id="idp70784"><h2>History</h2>
 	
 	<p>
 	  The <span class="package">liburi</span> library implements an alternative API to
