Correct uri_absolute_path(3) source documentation.

--- a/uri_absolute_path.3.html
+++ b/uri_absolute_path.3.html
@@ -113,7 +113,7 @@ hr.footnote-hr {
   
   
   <div class="refnamediv"><h2>Name</h2><p>
-	uri_absolute
+	uri_absolute_path
 	 — determine whether the path in a URI is relative or absolute
   </p></div>
   
